# UTIL-CONV-a2ps

./: ANNOUNCE  AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  Makefile.os2  NEWS  README  README.md  THANKS  a2ps.cmd  a2ps.prj  aclocal.m4  card  config.h  config.h.in  configure.in  configure.orig  fixps  pdiff  psmandup  psset  psset.cmd  readme.os2  texi2dvi4a2ps
afm/: Makefile.am  Makefile.in  fonts.map  fontsmap  make_fonts_map.sh  pcrb.afm  pcrbo.afm  pcrr.afm  pcrro.afm  phvbon.afm  phvron.afm  pplb.afm
autom4te.cache/: output.0  requests  traces.0
auxdir/: Makefile.am  Makefile.in
contrib/: Makefile.am  Makefile.in  card.in  card.m4  fixnt.c  fixnt.l  fixps.in  fixps.m4  pdiff.in  pdiff.m4  psmandup.in  psmandup.m4  psset.in  psset.m4  shell.m4  texi2dvi4a2ps
doc/: Makefile.am  Makefile.in  a2ps.info  a2ps.info-1  a2ps.info-2  a2ps.info-3  a2ps.info-4  a2ps.info-5  a2ps.info-6  a2ps.texi  encoding.texi  make-authors.pl  prologue.texi  regex.info  regex.info-1  regex.info-2  regex.info-3  sheets.texi  translators.txt  version.texi
encoding/: Makefile.am  Makefile.in  ascii.edf  encoding.map  hp.edf  ibm-cp437.edf  ibm-cp850.edf  iso1.edf  iso10.edf  iso13.edf  iso15.edf  iso2.edf  iso3.edf  iso4.edf  iso5.edf  iso7.edf  iso9.edf  koi8.edf  mac.edf  ms-cp1250.edf
etc/: Makefile.am  README  (+3 more)
m4/: Makefile.am  Makefile.in  a2_psutils.m4  atexit.m4  c-bs-a.m4  file.m4  fp_echo.m4  fullpath.m4  gccwarn.m4  gettext.m4  libpaper.m4  libtool.m4  lpr.m4  perl.m4  rename.m4  strcasecmp.m4  strftim.m4  tterm.m4
ogonkify/m4/: Makefile.am  Makefile.in  perl.m4
(+389 files in other folders)
