## -*- Makefile -*-
## Ogonkify auxdir directory
## Copyright (c) 1988, 89, 90, 91, 92, 93 Miguel Santana
## Copyright (c) 1995, 96, 97, 98 Akim Demaille, Miguel Santana
## $Id: Makefile.am,v 1.24 1998/06/22 15:46:13 demaille Exp $

## Process this file with automake to produce Makefile.in

aclocal_macros = perl.m4

EXTRA_DIST = $(aclocal_macros)
